# contabo-server-ubuntu

home_administrator/OdooAPI/fastapi_odoo_backup_20251106_0619/: .env  .env.example  CONCLUSION_ESPAÑOL.md  DOCUMENTACION_ACCESO.md  DOCUMENTACION_ESPAÑOL.md  DOCUMENTACION_ESPAÑOL_FINAL.md  MIGRACION_PLAN.md  PLAN_MIGRACION_DETALLADO.md  README.md  db.sqlite3  fastapi_admin.db  requirements.txt  run.py
home_administrator/docker/: docker-compose.yml
home_administrator/docker/bookstack/: .env  docker-compose.yaml
home_administrator/docker/focalboard/: docker-compose.yml
home_administrator/docker/huly/: .env  docker-compose.yml
home_administrator/docker/huly-selfhost/: configuracion-huly-npm.md
home_administrator/docker/metabase/: docker-compose.yml
home_administrator/docker/nginx-proxy-manager/: docker-compose.yml
home_administrator/docker/orangehrm/: docker-compose.yml
home_administrator/docker/ospos-docker/: docker-compose.yml
home_administrator/docker/plane/: docker-compose.yml  plane.env
home_administrator/docker/portainer/: docker-compose.yml
home_administrator/docker/postgresql-condo_sasq/: docker-compose.yml
home_administrator/docker/redash/: docker-compose.yml
home_administrator/larevel_api_odo/: .env
odoo_projects/odoo17-custom-addons/: README.md  odashboard_hooks_ref.py  update_po.py
odoo_projects/odoo17-custom-addons/sign/setup/_metapackage/: pyproject.toml
odoo_projects/odoo18-custom-addons/: .gitignore  README.md  config.yml  modules.csv  modules_installed.txt  run_migration.sh
odoo_projects/sarupetrol-custom-addons/: README.md
(+2079 files in other folders)
