[project]
name = "odoo-addons-oca-sign"
version = "17.0.20251123.0"
dependencies = [
    "odoo-addon-agreement_sign_oca>=17.0dev,<17.1dev",
    "odoo-addon-maintenance_sign_oca>=17.0dev,<17.1dev",
    "odoo-addon-project_task_sign_oca>=17.0dev,<17.1dev",
    "odoo-addon-sign_oca>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
